Position changed from fixed (covered whole bottom of page) to relative

--- a/_sass/hydure/_sidebar.scss
+++ b/_sass/hydure/_sidebar.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 55%;
   background-color: rgba(105,103,133, 0.6);
-  position: fixed;
+  position: relative;
   bottom: 0;
 }
 
